# nopush-ai

./: README.md  pyproject.toml
src/nopush/cli/: __init__.py  app.py  renderer.py
src/nopush/cli/commands/: init_cmd.py  review_cmd.py
src/nopush/config/: __init__.py  constants.py  manager.py  schema.py
src/nopush/prompts/: __init__.py  builder.py  templates.py
